tests-e2e/tests/snapshots/cli__duplicate_docs_scalar.snap
---
source: tests-e2e/tests/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [duplicate_flag] · command line:1:1
  •
  │
  • the argument '--output' cannot be used multiple times
  │
  │ Usage: iris docs [FLAGS] [SUBCOMMAND]
  │
  │ For more information, try '--help'.
  │
  │   iris docs --output one --output two --package .
  │   ╰──────────────────────────────────────────────
  •
