tests-e2e/tests/snapshots/cli__duplicate_lsp_scalar.snap
---
source: tests-e2e/tests/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [duplicate_flag] · command line:1:1
  •
  │
  • the argument '--config' cannot be used multiple times
  │
  │ Usage: iris lsp [FLAGS]
  │
  │ For more information, try '--help'.
  │
  │   iris lsp --config {} --config null
  │   ╰─────────────────────────────────
  •
