tests-e2e/tests/snapshots/cli__duplicate_typescript_scalar.snap
---
source: tests-e2e/tests/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [duplicate_flag] · command line:1:1
  •
  │
  • the argument '--output' cannot be used multiple times
  │
  │ Usage: iris docs typescript [--output <DIR>]
  │
  │ For more information, try '--help'.
  │
  │   iris docs typescript --output one --output two
  │   ╰─────────────────────────────────────────────
  •
