tests-e2e/tests/snapshots/cli__help_add.snap
---
source: tests-e2e/tests/cli.rs
---
status: 0
--- stdout
Add dependencies to a Spago package.

Usage: iris add [-p --package <NAME>] [--test] <DEPENDENCY>…

Arguments:
  <DEPENDENCY>…  Packages to add.

Flags:
  -p, --package <NAME>  Workspace package whose dependencies should change.
      --test            Add packages as test dependencies.
  -h, --help            Print help
--- stderr
