tests-e2e/tests/snapshots/cli__help_compile.snap
---
source: tests-e2e/tests/cli.rs
---
status: 0
--- stdout
Compile PureScript modules to JavaScript (experimental).

Usage: iris compile [FLAGS] [INPUT]…

Arguments:
  [INPUT]…  PureScript source paths or glob patterns.

Flags:
      --query-log <LevelFilter>     Log level for the query engine.
                                    [possible values: off, error, warn, info, debug, trace]
                                    (default: off)
      --checking-log <LevelFilter>  Log level for the type checker.
                                    [possible values: off, error, warn, info, debug, trace]
                                    (default: off)
  -o, --output <DIR>                Output directory for compiled modules.
                                    (default: output)
  -q, --quiet                       Suppress build progress output.
      --color <COLOR>               When to use colors in human-readable diagnostics.
                                    [possible values: auto, always, never]
                                    (default: auto)
      --package <DIR>               Package folder to compile.
      --codegen <TARGETS>           Code generation targets requested by build tools.
      --json-errors                 Emit a Spago-compatible JSON result.

                                    Full structured JSON diagnostics are not yet supported.
  -h, --help                        Print help
--- stderr
