tests-e2e/tests/snapshots/cli__help_docs.snap
---
source: tests-e2e/tests/cli.rs
---
status: 0
--- stdout
Documentation utilities.

Usage: iris docs [FLAGS] [SUBCOMMAND]

Commands:
  typescript  Generate TypeScript declarations for the documentation JSON schema.
  help        Print this message or the help of the given subcommand(s)

Flags:
      --query-log <LevelFilter>     Log level for the query engine.
                                    [possible values: off, error, warn, info, debug, trace]
                                    (default: off)
      --checking-log <LevelFilter>  Log level for the type checker.
                                    [possible values: off, error, warn, info, debug, trace]
                                    (default: off)
      --docs-log <LEVEL>            Log level for the documentation tool.
                                    [possible values: off, error, warn, info, debug, trace]
                                    (default: info)
      --output <DIR>                Output directory for the generated documentation.
                                    (default: docs)
  -q, --quiet                       Suppress documentation progress output.
      --spago-project <DIR>         Spago project directory containing spago.lock.
      --package <DIR>               Package folder to document.
  -h, --help                        Print help
--- stderr
