tests-e2e/tests/snapshots/cli__help_docs_typescript.snap
---
source: tests-e2e/tests/cli.rs
---
status: 0
--- stdout
Generate TypeScript declarations for the documentation JSON schema.

Usage: iris docs typescript [--output <DIR>]

Flags:
      --output <DIR>  Output directory for the generated TypeScript schema.
                      (default: src-generated)
  -h, --help          Print help
--- stderr
