tests-e2e/tests/snapshots/cli__help_new.snap
---
source: tests-e2e/tests/cli.rs
---
status: 0
--- stdout
Create a Spago project in the current directory.

Usage: iris new [--name <NAME>]

Flags:
      --name <NAME>  Package name. Defaults to the current directory name.
  -h, --help         Print help
--- stderr
